Solved RMI connection error and moved test package. added some playArea test